--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
+    "autoload": {
+        "psr-4": {
+            "App\\": "App/"
+        }
+    },
     "require": {
-        "easyswoole/easyswoole": "3.x"
+        "easyswoole/easyswoole": "3.x-dev"
     }
 }
